--- a/_posts/etc/2021-01-05-etc-stock.md
+++ b/_posts/etc/2021-01-05-etc-stock.md
@@ -3,7 +3,7 @@ title:  "[기타] 주식 시작하기"
 search: true
 last_modified_at: 2021-01-05
 categories:
-  - etc-stock
+  - etc
 tags:
   - stock 
 toc: true
@@ -17,14 +17,20 @@ toc_sticky: true
 계좌 종류 : CMA / 종합매매 / 연금저축 / 선물옵션 / 금현물
 수수료 면제인 주식 계좌를 개설하는게 정답
 
-    1. 간결하다
-    2. 별도의
 
 #### 2. 주식투자금 준비하기
 
 
 #### 3. 주식시장 기초지식
 
+```
+1. 주식회사 : 회사 설립에 필요한 돈을 주식발행을 통해 설립된 회사
+2. 주식 : 주식회사에 투자해서 생기는 주인된 권리를 나타내는 증서
+3. 주식매수 : 주식을 사는 행위
+4. 주주 : 주식을 소유하고 있는 사람들
+5. 유가증권시장 :현재 증권거래소에 상장되어 있는 주식, 채권, 수익증권을 매매하는시장
+6. 코스닥 : 벤처기업 및 유망중소기업의 자금 조달을 위해 설립된 시장
+```
 
 #### 4. 주식 사기
 
