--- a/_posts/html/2021-01-12-metaTag.md
+++ b/_posts/html/2021-01-12-metaTag.md
@@ -38,3 +38,8 @@ last_modified_at: 2021-01-12
 
 ## 메타태그 활용정리
 
+Static Site Generators - 정적인 HTML 웹페이지를 만들어줌<br>
+Jekyll 말고도 여러방법이 존재<br>
+
+트래픽 - 월 100GB<br>
+용량 - 1GB ( 저장소 )<br>
