--- a/_posts/info/2021-01-01-markdown.md
+++ b/_posts/info/2021-01-01-markdown.md
@@ -1,20 +1,22 @@
 ---
 title: "마크다운(MarkDown) 정리"
 description: "마크다운 사용법 간단하게 알아보자"
-search: true
+last_modified_at: 2020-12-30
 toc: true
 toc_sticky: true
-comments: true
 categories:
   - info
 tags:
   - markdown
-last_modified_at: 2020-12-30
 ---
 
 **마크다운?**<br>
-텍스트를 <u>HTML로 변환하는 언어이자 도구</u>, HTML문법도 사용가능 하다.<br>
-파일 확장자 `.md` 
+텍스트를 <u>HTML로 변환하는 언어이자 도구</u>, HTML문법도 사용가능 하다. 파일 확장자 `.md` 
+
+## 줄바꿈
+마크다운은 줄바꿈을 인식하지 않는다. 줄바꿈을 하기위해서는
+- 라인 끝에 스페이스 2번
+- \<br\>
 
 ## 제목(Header)
 ```
