--- a/_posts/info/2021-01-01-markdown.md
+++ b/_posts/info/2021-01-01-markdown.md
@@ -14,7 +14,7 @@ tags:
 텍스트를 <u>HTML로 변환하는 언어이자 도구</u>, HTML문법도 사용가능 하다. 파일 확장자 `.md` 
 
 ## 줄바꿈
-마크다운은 줄바꿈을 인식하지 않는다. 줄바꿈을 하기위해서는
+마크다운은 줄바꿈을 인식하지 않는다. 줄바꿈을 하기위해서는 아래 방법을 사용한다.
 - 라인 끝에 스페이스 2번
 - \<br\>
 
