--- a/_posts/html/2021-01-12-metaTag.md
+++ b/_posts/html/2021-01-12-metaTag.md
@@ -1,5 +1,5 @@
 ---
-title: "HTML meta tag 정리"
+title: "[HTML] meta tag 정리"
 description: "HTML meta tag 정리"
 search: true
 comments: true
@@ -33,13 +33,127 @@ last_modified_at: 2021-01-12
 - name을 대신해 사용가능
 - HTML문서가 웹브라우저에 전송되었을때만 의미를 가짐
 - 보통 웹브라우저가 서버에 정보를 전달하기 위한 속성
-- HTTP Responese header
 
 
 ## 메타태그 활용정리
+```html
+<meta name="viewport" content="width=device-width, initial-scale=1">
+```
+반응형 사이트를 위해 설정합니다
+<br>
+<br>
 
-Static Site Generators - 정적인 HTML 웹페이지를 만들어줌<br>
-Jekyll 말고도 여러방법이 존재<br>
+```html
+<meta http-equiv="title" content="meta tag" />
+```
+페이지 제목을 지정합니다
+<br>
+<br>
 
-트래픽 - 월 100GB<br>
-용량 - 1GB ( 저장소 )<br>
+```html
+<meta name="keywords" content="meta tag 정리">
+```
+검색 엔진에 의해 검색되는 단어를 지정합니다
+<br>
+<br>
+
+```html
+<meta name="description" content="meta tag 정리 입니다">
+```
+검색 결과에 표시되는 문자를 지정합니다
+<br>
+<br>
+
+```html
+<meta http-equiv="author" content="name" />
+```
+페이지 제작자를 지정합니다
+<br>
+<br>
+
+```html
+<meta http-equiv="publisher" content="company" />
+```
+페이지 제작사를 지정합니다
+<br>
+<br>
+
+```html
+<meta http-equiv="reply-To" content="test@naver.com" /> 
+<meta http-equiv="email" content="test@naver.com" />
+```
+메일 주소를 지정합니다
+<br>
+<br>
+
+```html
+<meta name="robots" content="noindex, nofollow">
+```
+검색로봇에 대한 명령입니다. `content`속성에는 다음과 같이 지정할 수 있습니다.
+- all : "index, follow" 를 지정한것과 같습니다
+- none : "noindex, nofollow" 를 지정한것과 같습니다
+- index : 페이지를 수집대상으로 합니다
+- noindex : 페이지를 수집대상으로 하지 않습니다
+- follow : 페이지를 포함해 링크가 걸린 곳을 수집대상으로 합니다
+- nofollow : 페이지를 포함해 링크가 걸린 곳을 수집대상으로 하지 않습니다
+<br>
+<br>
+  
+```html
+HTML 5
+<meta charset="UTF-8">
+
+HTML 4.01
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+```
+문자 인코딩을 설정합니다
+<br>
+<br>
+
+```html
+<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+```
+브라우저 호환성을 지정합니다
+<br>
+<br>
+
+```html
+<meta http-equiv="imagetoolbar" content="no" />
+```
+이미지 위에 마우스 오버시 이미지 관련 툴바를 생기지 않도록 하기 위해 지정합니다
+<br>
+<br>
+
+```html
+<meta http-equiv="Cache-Control" content="no-cache" /> 
+<meta http-equiv="Pragma" content="no-cache" />
+```
+페이지를 cache에서 가져오지 않게 합니다
+<br>
+<br>
+
+```html
+<meta http-equiv="Refresh" content="60" />
+```
+`content`의 초마다 새로고침을 정의 합니다
+<br>
+<br>
+
+```html
+<meta http-equiv="Refresh" content="5;url=주소" />
+```
+`content` 주소로 5초후 이동하는 것을 정의 합니다
+<br>
+<br>
+
+```html
+페이스북
+<meta property="og:title" content="제목">
+<meta property="og:site_name" content="사이트명">
+<meta property="og:type" content="분류">
+<meta property="og:url" content="주소">
+<meta property="og:image" content="썸네일 주소">
+<meta property="og:description" content="요약내용">
+
+```
+다양한 SNS공유 할때 필요한 정보들 입니다.
